# UNISIS-omm

./: .gitignore  README.md  annealing.py  control.py  dcd.py  droplet.py  droplet_tracer.py  generate_random_RNA.sh  input.toml  input_NHT22.toml  input_anneal.toml  monomer.py  monomer2annealing.py  pyproject.toml  rna_cg2.xml  run.sh  simulate.yaml  sis-torch.py  sis_params.py  sisrna.py  sisrna_BPfree.py
examples/A30/: A30.fasta  htv23_noBP.ff  input_A30.toml  run.sh
examples/KL-Ori-16X/: KL-Ori-16X.bpcoef  KL-Ori-16X.bpl  KL-Ori-16X.fasta  KL-Ori-16X_onlyintra.bpcoef  bpcoef_only_intra.py  compare.gnu  input.toml
examples/KL-Ori-16X/sis_dcd/: input.toml
examples/T2HP_ss/: T2HP.bpseq  T2HP.db  T2HP.fasta  compare.gnu  htv23_5.0_ee-17.ff  input_T2HP_go.toml  input_T2HP_go_dcd.toml  input_T2HP_go_long.toml  input_sis.toml  run.sh  test_T2HP_go.bpcoef
examples/TMnet_T2HP/: condor.txt  dcd.yaml  epoch=213-val_loss=0.0335-test_loss=0.0690.ckpt  run_mac_arm64.sh  simulate.yaml
legacy/: S2HP_anneal.txt  annealing.py  fine_graining.py  input_NHT22.toml  linear_64.xyz  monomer2annealing.py  run.sh  sigma.py  sisrna.py
params/: htv23_nnp_dihexp.ff  rna_cg2.xml  rna_cg_tracer.xml
unisis_omm/: __init__.py  rna_cg2.xml  sis_params.py  unisis.py  utils.py
utils/: insert_TER_to_VMDpdb.py
