[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unisis-omm"
version = "0.1.0"
description = "OpenMM script to run UNISIS-RNA model simulations"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Naoto Hori"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "openmm",
]

[project.scripts]
unisis-omm = "unisis_omm.unisis:main"

[project.optional-dependencies]
ML = ["torch", "openmmtorch"]

[tool.setuptools]
packages = ["unisis_omm"]

