[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unisis-omm"
dynamic = ["version"]
description = "OpenMM script to run UNISIS-RNA model simulations"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Naoto Hori"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "openmm",
    "toml ; python_version < '3.11'",
]

[project.scripts]
unisis-omm = "unisis_omm.unisis:main"

[project.optional-dependencies]
ML = ["torch", "openmmtorch"]

[tool.setuptools]
packages = ["unisis_omm"]

[tool.setuptools.package-data]
"unisis_omm" = ["rna_cg2.xml"]

[tool.setuptools_scm]
